# finalprojects23-pixelpioneers

./: Adjustments.py  Factory_Test.ipynb  IO_Class.py  Interface.py  README.md  Test.ipynb  Transforms.py  Unit_Tests.ipynb  main.ipynb  requirements.txt  setup.cfg  setup.py
.github/workflows/: documentation.yml  pages_deployment.yml  pytest.yml
Unit_Test/: Unit_Test_Transforms.ipynb
docs/source/: conf.py  index.rst
docs/source/rst/: index.rst  package.rst
docs/source/rst/actions/: index.rst
docs/source/rst/image_io/: bmp_io.rst  index.rst  jpeg_io.rst  png_io.rst
src/pixelpioneers/: __init__.py  cli.py  cli_parser.py  exceptions.py  main.py  utils.py
src/pixelpioneers/actions/: abstract_image_action.py  unified_actions.py
src/pixelpioneers/actions/adjustments/: __init__.py  _abstract_image_adjustment.py  _brightness_adjustment.py  _contrast_adjustment.py  _saturation_adjustment.py
src/pixelpioneers/actions/transformers/: __init__.py  _abstract_image_transformer.py  _crop.py  _flip.py  _grayscale.py  _invert.py  _resize.py  _rotate.py
src/pixelpioneers/image_io/: __init__.py  _abstract_io.py  _bmp_io.py  _jpeg_io.py  _png_io.py  unified_io.py
test/test_adjustments/: test_adjustment_brightness.py  test_adjustment_contract.py  test_adjustment_saturation.py
test/test_image_io/: test_bmp_io.py  test_jpeg_io.py  test_png_io.py
test/test_transformer/: test_crop_transformer.py  test_flip_transformer.py  test_grayscale_transformer.py  test_invert_transformer.py  test_resize_transformer.py  test_rotate_transformer.py
(+11 files in other folders)
