[metadata]
name = pixelpioneers
version = attr: pixelpioneers.__version__
description = A Lightweight Python Library for Essential Image Processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gabe-teaching-nyu-tandon/group_git_sandbox-pixelpioneers.git


[options]
packages = find:
package_dir =
	=src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	pixelpioneers = pixelpioneers.cli:main

[bdist_wheel]
universal = 1